menu items alignment fixed

--- a/src/components/Detail/Detail.css
+++ b/src/components/Detail/Detail.css
@@ -23,6 +23,8 @@
   width: 200px;
   height: 200px;
   border: 1px solid #ccc;
+  float: left;
+  margin: 10px;
 }
 
 .MenuItemContainer {
